侧滑菜单，不能上滑下拉 ，请求网络地址

--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="#ffff0000">
     <ImageView
+        android:id="@+id/im_logo"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
